<resources>
    <string name="app_name">LogistCalc</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_drivers">Водители</string>
    <string name="tab_cars">Автомобили</string>
    <string name="tab_tarifs">Тарифы</string>
    <string name="tab_order_calculate">Рассчёт поездки</string>

    <string name="activity_new_driver">Создать водителя</string>
    <string name="activity_phone">Указать телефон</string>

    <string name="main_menu_settings">Настройки</string>
    <string name="main_menu_about">О приложении</string>

    <string name="label_full_name">ФИО</string>
    <string name="label_passport">Паспортные данные</string>
    <string name="label_driver_card">Водительское удостоверение</string>
    <string name="save">Сохранить</string>
    <string name="label_phone">Телефон</string>
    <string name="ok">Ок</string>
</resources>
